# raspiaprs

./: .env.SAMPLE  .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  README.md  SECURITY.md  aprstar.py  default.env  main.py  main.sh  mmcli_loc_get.sh  pylock.toml  pyproject.toml  raspiaprs.conf  raspiaprs.py  raspiaprs.service  requirements.txt  rpiaprs.conf  rpiaprs.py  rpiaprs.service  sbom.json
.github/: changelog-ci-config.json  changelog-ci-config.yaml  cliff.toml  renovate.json
.github/workflows/: auto-approve.yml  changelog-ci.yml  changelog.yml  generate-changelog.yml  merge-schedule.yml  pre-release.yml  pylint.yml  release.yml  sync-to-gitlab.yml  sync.yml  update-changelog.yml
etc/: raspiaprs.conf
lib/systemd/system/: raspiaprs.service
tests/: address.py  gps.py  grid-square.py
