[project]
name = "RasPiAPRS"
version = "0.1-beta.2"
description = "APRS telemetry for Pi-Star / WPSD / AllStarLink"
keywords = ["amateur-radio", "aprs", "aprs-beacon", "mmdvm", "pi-star", "aprs-telemetry", "allstarlink", "wpsd"]
readme = "README.md"
license = "BSD-3-Clause"
authors = [
  {name = "Fred Cirera"},
  {name = "Hafizi Ruslan", email = "9w2lgx@mhrtech.my"}
]
maintainers = [
  {name = "Hafizi Ruslan", email = "9w2lgx@mhrtech.my"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.13"
dependencies = [
  "aprslib>=0.7.2",
  "gpsdclient>=1.3.2",
  "humanize>=4.14.0",
  "psutil>=7.1.3",
  "python-dotenv>=1.2.1",
  "python-telegram-bot>=22.5",
]

[project.urls]
repository = "https://github.com/HafiziRuslan/raspiaprs"
changelog = "https://github.com/HafiziRuslan/raspiaprs/blob/master/CHANGELOG.md"
