[project]
name = "RasPiAPRS"
version = "0.1-beta.4"
description = "APRS telemetry for Pi-Star/WPSD/AllStarLink"
keywords = [
  "amateur-radio",
  "aprs",
  "aprs-beacon",
  "mmdvm",
  "pi-star",
  "aprs-telemetry",
  "allstarlink",
  "wpsd",
]
readme = "README.md"
license = "GPL-3.0-only AND BSD-3-Clause"
authors = [
  { name = "Fred Cirera", email = "github-fred@hidzz.com" },
  { name = "Hafizi Ruslan", email = "9w2lgx@mhrtech.my" },
]
maintainers = [{ name = "Hafizi Ruslan", email = "9w2lgx@mhrtech.my" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

requires-python = ">=3.13"
dependencies = [
  "aprslib>=0.7.2",
  "gpsdclient>=1.3.2",
  "humanize>=4.15.0",
  "psutil>=7.2.0",
  "python-dotenv>=1.2.1",
  "python-telegram-bot>=22.5",
]

[project.urls]
repository = "https://github.com/HafiziRuslan/raspiaprs"
changelog = "https://github.com/HafiziRuslan/raspiaprs/blob/master/CHANGELOG.md"
